# jmespath-proxy

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dprint.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
charts/jmespath-proxy/: Chart.yaml  values.yaml
charts/jmespath-proxy/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/jmespath-proxy/templates/tests/: test-connection.yaml
demo/: README.md  docker-compose.yml
demo/alertmanager/: alertmanager.yml
demo/flapper/: flapper.prom
demo/prometheus/: alert_rules.yml  prometheus.yml
notebooks/: example.ipynb
scripts/: create-release.sh
src/jmespath_proxy/: app.py  cli.py
src/jmespath_proxy/templates/: index.html
templates/: index.html
tests/: test_app.py  test_jmespath.py
