[project]
name = "jmespath-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Enno Richter", email = "enno@nerdworks.de" }]
requires-python = ">=3.13"
dependencies = [
  "jmespath>=1.0.1",
  "litestar[jinja,standard]>=2.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
