[project]
name = "jmespath-proxy"
version = "0.8.0"
description = "API service to apply JMESPath expressions to JSON data and forward to URLs"
readme = "README.md"
authors = [{ name = "Enno Richter", email = "enno@nerdworks.de" }]
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
  "jmespath-community>=1.1.3",
  "litestar[jinja,standard]>=2.15.1",
  "truststore>=0.10.1",
]

[dependency-groups]
dev = [
  "ruff>=0.11.6",
]
test = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
]

[project.urls]
"Homepage" = "https://github.com/elohmeier/jmespath-proxy"
"Bug Tracker" = "https://github.com/elohmeier/jmespath-proxy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jmespath_proxy"]
include = ["/templates", "/static"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
jmespath-proxy = "jmespath_proxy.cli:main"
